--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,10 @@ body {
     margin-top: 10px;
 }
 #nav-list a{
-    font-family: '', cursive;
+    font-family: 'Kaushan Script', cursive;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 1.1rem;
     color: rgb(119, 12, 12);
     text-align: center;
 }
