--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,23 @@ body {
     font-family: 'Kaushan Script', cursive;
     text-transform: uppercase;
     font-weight: 900;
-    font-size: 1.1rem;
     color: rgb(119, 12, 12);
     text-align: center;
+}
+#nav-list a span{
+    font-size: 1.2em;
+}
+#nav-list li div{
+    font-family: 'Kaushan Script', cursive;
+    text-transform: uppercase;
+    font-weight: 900;
+    color: rgb(10, 70, 20);
+    text-align: right;
+}
+#phone{
+    margin-top: 5px;
+}
+#phone a{
+    text-align: right;
+    padding-bottom: 0;
 }
