--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,11 @@ body {
 }
 @media (max-width: 431px) {
   .navbar-brand a h1 {
-    font-size: 0.5em;
+    font-size: 3.5vw;
     padding-bottom: 15px;
+  }
+  .jumbotron{
+    height: 300px;    
+  }
   }
 }
