--- a/css/style.css
+++ b/css/style.css
@@ -228,10 +228,11 @@ hr {
   width: 100%;
   text-align: center;
   font-size: 1.2em;
+  background-color: black;
+  color: white;
+  opacity: 0.8;
   text-transform: uppercase;
-  background-color: #000;
-  color: #fff;
-  opacity: .8;
+  font-family: 'Rowdies', cursive;
 }
 .active{
   background-color: white;
@@ -241,8 +242,14 @@ hr {
   box-shadow: 0 1px 5px 1px #cccccc;
 }
 
-#menu-categories-title+div {
+#tip{
+  color: white;
+  
   margin-bottom: 50px;
+}
+#menu-title{
+  font-family: 'Rowdies', cursive;
+  color: white;
 }
 
 @media (min-width: 1200px) {}
